<resources>
    <string name="app_name">Nasa</string>
    <string name="please_wait">Please wait</string>
    <string name="no_internet">No internet</string>
    <string name="application_made_by_nikola">Application made by Nikola</string>
    <string name="items">Items</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="confirm_to_exit">Confirm to exit app!</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="explanation">Explanation</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="not_a_member">Not a member</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_not_match">Password is not matching</string>
    <string name="insert_data_in_empty_fields">Insert data in empty fields</string>
    <string name="google_maps">Google maps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_location">Search location</string>
    <string name="search">Search</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="zadar">Zadar</string>
</resources>