<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".SignInActivity">


    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInput"
        android:layout_marginTop="@dimen/tiMarginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEdit"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput"
        android:layout_marginTop="@dimen/tiMarginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEdit"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/singInButton"
        android:layout_marginTop="@dimen/tiMarginTop"
        android:text="@string/sign_in"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="@dimen/tiMarginTop"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/not_a_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_marginTop="@dimen/tiMarginTop"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>