<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="@dimen/itemsPadding"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/flat_about"
            android:id="@+id/ivItem"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ivPagerHeight"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop">

            <TextView
                android:text="@string/date"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <ImageView

                android:id="@+id/ivRead"
                android:src="@drawable/red_flag"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvDate"
            android:text="yyyy-MM-dd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/title"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="Top G"
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/explanation"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="Top G"
            android:id="@+id/tvExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>